; ModuleID = '/home/carl/AnghaBench/pifs/src/extr_πfs.c_pifs_utimens.c'
source_filename = "/home/carl/AnghaBench/pifs/src/extr_\CF\80fs.c_pifs_utimens.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.timespec = type { i32 }

@options = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.timespec*)* @pifs_utimens to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pifs_utimens(i8* %0, %struct.timespec* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.timespec*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.timespec* %1, %struct.timespec** %5, align 8
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @options, i32 0, i32 0), align 4
  %9 = call i32* @opendir(i32 %8)
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @errno, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %33

15:                                               ; preds = %2
  %16 = load i32*, i32** %6, align 8
  %17 = call i32 @dirfd(i32* %16)
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @basename(i8* %18)
  %20 = load %struct.timespec*, %struct.timespec** %5, align 8
  %21 = call i32 @utimensat(i32 %17, i32 %19, %struct.timespec* %20, i32 0)
  store i32 %21, i32* %7, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @closedir(i32* %22)
  %24 = load i32, i32* %7, align 4
  %25 = icmp eq i32 %24, -1
  br i1 %25, label %26, label %29

26:                                               ; preds = %15
  %27 = load i32, i32* @errno, align 4
  %28 = sub nsw i32 0, %27
  br label %31

29:                                               ; preds = %15
  %30 = load i32, i32* %7, align 4
  br label %31

31:                                               ; preds = %29, %26
  %32 = phi i32 [ %28, %26 ], [ %30, %29 ]
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %31, %12
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32* @opendir(i32) #1

declare dso_local i32 @utimensat(i32, i32, %struct.timespec*, i32) #1

declare dso_local i32 @dirfd(i32*) #1

declare dso_local i32 @basename(i8*) #1

declare dso_local i32 @closedir(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
